# balancebot-3000

./: .gitmodules  README.org
pi/: .gitignore
pi/mpu6050/: CMakeLists.txt  analyze.py  calibration.json  kalmanfilter.json
pi/mpu6050/src/: attitude.cpp  attitude.hpp  broadcaster.cpp  calibration.cpp  calibration.hpp  i2c.cpp  i2c.hpp  imu.cpp  imu.hpp  kalman.cpp  kalman.hpp  mpu6050.cpp  mpu6050.hpp  receiver.cpp  sampler.cpp  utility.cpp  utility.hpp  utility.ipp
pi/mpu6050/tests/: mpu6050-test.cc
propeller/: blink.spin  build.sh  clock-over-spi.spin  spi-dispatch.spin  spidev-test.py  stepper.spin  test.spin
propeller/lib/: servo.spin
visualization/: index.html  mpu6050-read.py  server.py  test-write.py
visualization/static/: rpi.stl
visualization/static/css/: jimmy.css  visualization.css
visualization/static/js/: graph.js  imageontarget.js  scene.js  visualization.js
